
// <auto-generated>
//     Generated by the protocol buffer generator.  DO NOT EDIT!
// </auto-generated>

syntax = "proto3";

option csharp_namespace = "CRUD_With_gRPC";

package "IProductService";


service IProductServiceService {
    rpc GetIProductService (IProductServiceRequest) returns (IProductServiceResponse) { }
    rpc GetIProductServiceList (IProductServiceListRequest) returns (IProductServiceListResponse) { }
    rpc CreateIProductService (IProductServiceCreateRequest) returns (IProductServiceCreateResponse) { }
    rpc UpdateIProductService (IProductServiceUpdateRequest) returns (IProductServiceUpdateResponse) { }
    rpc DeleteIProductService (IProductServiceDeleteRequest) returns (IProductServiceDeleteResponse) { }
}

message IProductServiceRequest {
    int64 Id = 1;
}

message IProductServiceResponse {
    int64 Id = 1;
}

message IProductServiceListRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
}

message IProductServiceListResponse {
    repeated IProductServiceResponse IProductService = 1;
    int32 TotalCount = 2;
}

message IProductServiceCreateRequest {
    string Name = 1;
}

message IProductServiceCreateResponse {
    int64 Id = 1;
}

message IProductServiceUpdateRequest {
    int64 Id = 1;
    string Name = 2;
}

message IProductServiceUpdateResponse {
    int64 Id = 1;
}

message IProductServiceDeleteRequest {
    int64 Id = 1;
}

message IProductServiceDeleteResponse {
    int64 Id = 1;
}
