
// <auto-generated>
//     Generated by the protocol buffer generator.  DO NOT EDIT!
// </auto-generated>


syntax = "proto3";

option csharp_namespace = "CRUD_With_gRPC.Core";

import "google/api/annotations.proto";

package ProductServicePackage;

service ProductService {
    
    rpc GetProduct (GetProductRequest) returns (ProductResponse) {
        option (google.api.http) = {
            get: "/api/products/{id}"
        };
    }

}


message GetProductRequest {
    int64 id = 1;
}

message ProductResponse {
    int64 Id = 1;
    string Name = 2;
    string Description = 3;
    float Price = 4;
}


